[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "z2pdf"
version = "0.1.0"
description = "Z-Machine to PDF debugging tool - extract maps, vocabulary, and objects from Infocom-style games"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    {name = "Aaron Wohl"}
]
keywords = ["z-machine", "infocom", "interactive-fiction", "pdf", "map", "debugging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Debuggers",
]
requires-python = ">=3.8"
dependencies = [
    "reportlab>=3.5.0",
    "z2js>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/awohl/z2pdf"
Repository = "https://github.com/awohl/z2pdf"
Issues = "https://github.com/awohl/z2pdf/issues"

[project.scripts]
z2pdf = "z2pdf.main:main"

[tool.setuptools.packages.find]
where = ["src"]
